# text-summarizer

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
api/: __init__.py  main.py
examples/: sample.txt
notebooks/legacy/: abstractive_text_summ_.py  extractive_text_summarization.py
summarizer/: __init__.py  __main__.py  cli.py  preprocessing.py  vectorizer.py
summarizer/abstractive/: __init__.py  bart.py
summarizer/evaluation/: __init__.py  rouge.py
summarizer/extractive/: __init__.py  base.py  frequency.py  textrank.py
tests/: test_api.py  test_cli.py  test_preprocessing.py  test_rouge.py  test_summarizers.py  test_vectorizer.py
