[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "text-summarizer"
version = "1.0.0"
description = "Extractive (TextRank, frequency) and abstractive text summarization with a REST API and CLI"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Pranjal Patel", email = "patelpranjal8931@gmail.com" }]
keywords = ["nlp", "summarization", "textrank", "pagerank", "rouge"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing :: Linguistic",
]
# Core package has ZERO runtime dependencies (standard library only).
dependencies = []

[project.optional-dependencies]
api = ["fastapi>=0.110", "uvicorn[standard]>=0.29"]
ml = ["transformers>=4.40", "torch>=2.2"]
dev = ["pytest>=8.0", "httpx>=0.27", "ruff>=0.4"]

[project.scripts]
summarize = "summarizer.cli:main"

[tool.setuptools.packages.find]
include = ["summarizer*", "api*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
